--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,14 @@
-<h2>Edit Historical Landmark</h2>
+<h2>Edit <%= @landmark.id %></h2>
+<form method="POST" action="/landmarks/<%= @landmark.id %>">
+    <input id="hidden" type="hidden" name="_method" value="patch">
+    <label>Name:</label>
+    <input type="text" name="landmark[name]" id="name" value="<%= @landmark.name %>"><br><br>
+    <label<Year Completed:</label>
+    <input type="text" name="landmark[year_completed]" id="year_completed" value="<%= @landmark.year_completed %>"><br><br>
 
-<!-- add content here -->
+    <input type="submit" value="Edit Landmark">
+
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
