--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,18 @@
 <h2>Create New Landmark</h2>
+ 
+<form action="/landmarks" method="POST">
+  <label>Name:</label>
+ 
+  <br>
+ 
+  <input type="text" name="landmark[name]" id="landmark_name"><br><br>
 
-<!-- add content here -->
+  <label>Year Completed:</label>
+  
+  <input type="text" name="landmark[year_completed]" id="landmark_year_completed"><br><br>
+ 
+  <input type="submit" value="Create New Landmark">
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
