--- a/app/views/landmarks/show.erb
+++ b/app/views/landmarks/show.erb
@@ -1,13 +1,5 @@
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Year Completed</th>
-  </tr>
-  <tr>
-    <td><%= @landmark.name %></td>
-    <td><%= @landmark.year_completed %></td>
-  </tr>
-<table>
+<h1><%= @landmark.name %></h1>
+<%= @landmark.year_completed %><br><br>
 
-<a class="button" href="/landmarks/<%= @landmark.id %>/edit">Edit Landmark</a>
+<a href="/landmarks/<%= @landmark.id %>/edit"><input type="button" value="Edit"</a>
 <a class="button" href="/landmarks">Landmarks</a>
